[gd_scene load_steps=22 format=2]

[ext_resource path="res://Huntress.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Huntress/Huntress/Sprites/Run.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/Huntress/Huntress/Sprites/Attack2.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 14.1077, 18.887 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 28.3129, 5.23324 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 10, 13.7791 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 10, 3.47392 )

[node name="Huntress" type="KinematicBody2D"]
scale = Vector2( 1.25, 1.25 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "Run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.24746, 4.25423 )
shape = SubResource( 15 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 12.4429, -28.1837 )
shape = SubResource( 16 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 35.1948, -11.3448 )
shape = SubResource( 17 )

[node name="Run" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Attack" type="Timer" parent="."]
one_shot = true

[node name="Hit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
position = Vector2( 18.2389, -1.06476 )
shape = SubResource( 18 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Run" to="." method="_on_Run_timeout"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]
